# NexusFW

./: CMakeLists.txt  Kconfig  README.md  dir_tree.py  prj.conf  vtod.ipynb
boards/dsy/CachexiaBoardIt2/: CachexiaBoardIt2-pinctrl.dtsi  CachexiaBoardIt2.dts  CachexiaBoardIt2.yaml  Kconfig.CachexiaBoardIt2  Kconfig.defconfig  board.yml
boards/dsy/CachexiaIt3/: CachexiaIt3-pinctrl.dtsi  CachexiaIt3.dts  CachexiaIt3.yaml  Kconfig.CachexiaIt3  Kconfig.defconfig  board.yml
boards/dsy/MLXTEST/: Kconfig.MLXTEST  Kconfig.defconfig  MLXTEST.dts  MLXTEST.yaml  board.yml
boards/dsy/MechanicalSensor/: Kconfig.MechanicalSensor  Kconfig.defconfig  MechanicalSensor.dts  MechanicalSensor.yaml  board.yml
boards/dsy/ad5689_stimulator/: Kconfig.ad5689_stimulator  ad5689_stimulator.dts  ad5689_stimulator.yml  board.yml
boards/dsy/baochunBoard/: Kconfig.baochunBoard  Kconfig.defconfig  baochunBoard-pinctrl.dtsi  baochunBoard.dts  baochunBoard.yaml  board.yml
boards/dsy/drug_delivery/: Kconfig.defconfig  Kconfig.drug_delivery  board.yml  drug_delivery.dts  drug_delivery.yaml
boards/dsy/ecgbioz/: Kconfig.defconfig  Kconfig.ecgbioz  board.yml  ecgbioz-pinctrl.dtsi  ecgbioz.dts  ecgbioz.yaml
boards/dsy/gfet/: Kconfig.defconfig  Kconfig.gfet  board.yml  gfet-pinctrl.dtsi  gfet.dts  gfet.yaml
boards/dsy/stimulator270/: Kconfig.defconfig  Kconfig.stimulator270  board.yml  stimulator270-pinctrl.dtsi  stimulator270.dts  stimulator270.yaml
dts/bindings/: dsy,ad5689.yaml  dsy,ad5778r.yaml  dsy,ad5941.yaml  dsy,max30001.yaml  dsy,mlx90393.yaml  dsy,mlx90397.yaml  vender-prefixes.txt
include/ble/: ble.h  ble_ad5689_srv.h  ble_adv_core.h  ble_cachexia_cs_srv.h  ble_cachexia_srv.h  ble_drug_delivery_srv.h  ble_gfet_srv.h  ble_max30001_stream_srv.h  ble_mlx97_srv.h  ble_mlx_srv.h
include/driver/: ad5689.h  ad5778r.h  ad5941.h  adg5436.h  max30001.h  mlx90393.h  mlx90397.h
src/: main.c
src/app/: cachexia_app.c  cachexia_cs_app.c  cachexia_cs_app_diag.c  drug_delivery_app.c  gfet_app.c  max30001_stream_app.c  mlx90397_dual_app.c  mlx_app.c  mux_probe_app.c
src/ble/: ble_ad5689_srv.c  ble_adv_core.c  ble_advertise.c  ble_cachexia_cs_srv.c  ble_cachexia_srv.c  ble_drug_delivery_srv.c  ble_gfet_srv.c  ble_max30001_stream_srv.c  ble_mlx97_srv.c  ble_mlx_srv.c
src/driver/: ad5689.c  ad5778r.c  ad5941.c  adg5436.c  max30001.c  mlx90393.c  mlx90397.c
